--- a/src/components/TodoList/todoList.module.scss
+++ b/src/components/TodoList/todoList.module.scss
@@ -1,15 +1,18 @@
 .todoList {
     padding: 3rem;
-    border: 1px solid red
+
+
 }
 
 .todoWrap {
     margin-left: auto;
     margin-right: auto;
     max-width: 100rem;
-    background-color: white;
+    background-color: #fff;
 
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 3rem;
     border-radius: 5px;
+    border: 2px solid #14adbd;
+
 }
